MUCHOS CHANGES EN API Y EN WEB LOCAL DATABASE

--- a/NovoStandNSpeedWay/Api/Api.csproj
+++ b/NovoStandNSpeedWay/Api/Api.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="ApiDocumentation.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="ApiDocumentation.xml" />
   </ItemGroup>
 
