--- a/NovoStandNSpeedWay/Api/appsettings.json
+++ b/NovoStandNSpeedWay/Api/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
 
   "ConnectionStrings": {
+    "DefaultConnection": "Server=LUISESQUIVEL; Initial Catalog=NovoNStandSpeedWay; User ID=sa; Password=Les2010?"
   },
 
   "AppSettings": {
